spacing fix

--- a/cardrender.css
+++ b/cardrender.css
@@ -18,7 +18,7 @@ body
 .cardfile.artist .cardfile_bgr
 {
 	position:		fixed;
-	top:			26pt;
+	top:			12pt;
 	bottom:			0;
 	left:			0;
 	right:			0;
